# HeySeen

./: .gitignore  COMPARISON.md  CONTRIBUTING.md  LICENSE  OCR_QUALITY_REPORT.md  PHASE2.3_LAYOUT_REPORT.md  PHASE2.3_TEXIFY.md  PLAN.md  README.md  TECHNICAL.md  pyproject.toml  requirements.txt  suggestion.md
deploy/: check_dns_perm.py  check_zone_account.py  create_favicon.py  create_heyseen_favicon.py  debug_notes.txt  fix_dns_split_auth.py  health_check.sh  install_autostart.sh  list_accounts.py  setup_cloudflare_api.py  setup_tunnel.sh  start_named_tunnel.sh  start_quick_tunnel.py  start_services.sh  start_tunnel_bg.sh  stop_services.sh  verify_token.py
docs/: API.md  ENHANCEMENTS.md  PHASE2.2b_MATH_REPORT.md  PHASE2.4_LAYOUT_IMPROVEMENT_PLAN.md  PHASE2_REPORT.md  PHASE3_OPTIMIZATION_REPORT.md  USER_MANAGEMENT.md
examples/OCR_test_3_refined/: meta.json
examples/OCR_test_3_refined_v2/: main.tex  meta.json
examples/OCR_test_3_refined_v3/: main.tex  meta.json
examples/OCR_test_3_refined_v4/: main.tex  meta.json
examples/OCR_test_3_refined_v5/: main.tex  meta.json
examples/OCR_test_3_refined_v6/: main.tex  meta.json
heyseen/: __init__.py
output_layout_test_v16/: main.tex  meta.json
output_test_tables/: main.tex  meta.json
scripts/: benchmark.py  check_surya_modules.py  compare_2col.py  compare_layout_test.py  compare_mathpix.py  compare_results.py  debug_llm.py  inspect_surya.py  test_surya_layout.py
tests_original/: test_1_original.tex  test_2_original.tex  test_2columns.tex  test_3_original.tex  test_layout.tex  test_paper.tex  test_tables.tex
(+36 files in other folders)
